<resources>
    <string name="app_name">Cheat Book</string>
    <string name="search">Search</string>
    <string name="cheat_book">Cheat Book</string>
    <string name="game_name">Game name</string>
    <string name="pc">PC</string>
    <string name="xbox">Xbox</string>
    <string name="ps3">PS3</string>
    <string name="ps4">PS4</string>
    <string name="most_popular">Most Popular</string>
    <string name="Red_Dead_Redemption_2">Red Dead Redemption II</string>
    <string name="games_tips_hints_cheat_codes"><![CDATA[Games : Tips, Hints & Cheat Codes]]></string>
    <string name="menu_cheatbook">CheatBook</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="contact_us">Contact Us</string>
    <string name="feedback">Feedback</string>
    <string name="rate_us">Rate Us</string>
    <string name="share">Share</string>
    <string name="request_game">Request Game</string>
    <string name="app_version">Version 1.0.0</string>
    <string name="feedback_activity">FEEDBACK</string>
    <string name="enter_your_name">Enter name</string>
    <string name="subject">Subject</string>
    <string name="enter_message">Enter Message</string>
    <string name="select_country">Select Country</string>
    <string name="send_feedbck">Send Feedbck</string>
    <string name="enter_game_suggestion">Enter Game Suggestion...</string>
</resources>