<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/menu_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_request_game"
            android:icon="@drawable/menu_request"
            android:title="@string/request_game" />


        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/menu_share"
            android:title="@string/share" />

        <item
            android:id="@+id/nav_rate_us"
            android:icon="@drawable/menu_rate_us"
            android:title="@string/rate_us" />

        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/menu_contact_us"
            android:title="@string/contact_us" />

        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/menu_feedback"
            android:title="@string/feedback" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/menu_about"
            android:title="@string/about" />
    </group>
</menu>